<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BFE6FF"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/helper_name"
        android:layout_width="110dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal|top"
        android:text="@string/helper_name"
        android:textAppearance="@style/helper_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_knocked_human"
        android:layout_width="264dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88dp"
        android:background="@drawable/button_main"
        android:elevation="4dp"
        android:onClick="click_knocked_human"
        android:text="@string/text_knocked_human"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/button_knocked_auto"
        android:layout_width="267dp"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="276dp"
        android:background="@drawable/button_main"
        android:elevation="4dp"
        android:text="@string/text_knocked_auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_knocked_animal"
        android:layout_width="267dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="188dp"
        android:background="@drawable/button_main"
        android:elevation="4dp"
        android:text="@string/text_knocked_animal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_knocked_subject"
        android:layout_width="267dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="376dp"
        android:background="@drawable/button_main"
        android:elevation="4dp"
        android:text="@string/text_knocked_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="104dp"
        android:background="@color/BFE6FF"
        android:onClick="click_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="OnClick" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:background="@color/BFE6FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/search" />

    <ImageButton
        android:id="@+id/button_home"
        android:layout_width="72dp"
        android:layout_height="56dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="100dp"
        android:background="@color/BFE6FF"
        android:onClick="click_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/home"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>