<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BFE6FF"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/helper_name"
        android:layout_width="110dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal|top"
        android:text="@string/helper_name"
        android:textAppearance="@style/helper_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_112"
        android:layout_width="265dp"
        android:layout_height="128dp"
        android:layout_marginTop="112dp"
        android:text="@string/text_103_102"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="Вызывайте скорую помощь: 103 и полицию: 102" />

    <Button
        android:id="@+id/what_do"
        android:layout_width="264dp"
        android:layout_height="68dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="208dp"
        android:background="@drawable/button_main"
        android:elevation="4dp"
        android:onClick="click_what_do"
        android:text="@string/text_what_do"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/what_happen_me"
        android:layout_width="267dp"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="312dp"
        android:background="@drawable/button_main"
        android:elevation="4dp"
        android:text="@string/text_what_happen_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="120dp"
        android:background="@color/BFE6FF"
        android:onClick="click_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="OnClick" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:background="@color/BFE6FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/search" />

    <ImageButton
        android:id="@+id/button_home"
        android:layout_width="72dp"
        android:layout_height="56dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="116dp"
        android:background="@color/BFE6FF"
        android:onClick="click_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/home" />


</androidx.constraintlayout.widget.ConstraintLayout>