<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BFE6FF"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/helper_name"
        android:layout_width="110dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:gravity="center_horizontal|top"
        android:text="@string/helper_name"
        android:textAppearance="@style/helper_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/button_dtp"
        android:layout_width="264dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_main"
        android:elevation="4dp"
        android:onClick="click_dtp"
        android:text="@string/text_dtp"
        app:layout_constraintEnd_toEndOf="@+id/helper_name"
        app:layout_constraintStart_toStartOf="@+id/helper_name"
        app:layout_constraintTop_toBottomOf="@+id/helper_name"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/carsharing"
        android:layout_width="267dp"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_main"
        android:elevation="4dp"
        android:text="@string/text_pdd"
        app:layout_constraintEnd_toEndOf="@+id/button_dtp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_dtp"
        app:layout_constraintTop_toBottomOf="@+id/button_dtp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="46dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="76dp"
        android:background="@color/BFE6FF"
        android:onClick="click_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="OnClick" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:background="@color/BFE6FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/search" />

    <ImageButton
        android:id="@+id/button_home"
        android:layout_width="72dp"
        android:layout_height="56dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="76dp"
        android:background="@color/BFE6FF"
        android:onClick="click_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/home"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>